infra/backend-deployment.yaml
# infra/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecom-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecom-backend
  template:
    metadata:
      labels:
        app: ecom-backend
    spec:
      containers:
        - name: ecom-backend
          image: acrecomt5.azurecr.io/ecom-backend:v1
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: ecom-backend-svc
spec:
  selector:
    app: ecom-backend
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
