infra/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecom-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: ecom-frontend
  ports:
    - port: 80
      targetPort: 80
